tests/errors/syn_method4.java
public class syn_method4{
 public static void main ( ) }
}